[package]
name = "ustreamer"
version = "0.1.0"
edition = "2024"

[dependencies]
resize = "0.8.8"
rgb = "0.8.52"
turbojpeg = { version = "1.3.3", features = ["image"] }
v4l2r = { version = "0.0.7", features = ["arch64"] }
yuv = { version = "0.8.6", features = ["fast_mode"] }
rayon = "1.10.0"
clap = "4.5.45"

axum = "0.8.4"
bytes = "1.10.1"
futures = "0.3.31"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["fs", "io-util", "net", "rt-multi-thread"] }
chrono = "0.4.41"
sysinfo = "0.37.0"
uuid = { version = "1.18.0", features = ["v4"] }
users = "0.11.0"

[build-dependencies]
bindgen = "0.72.0"

[features]
default = ["rk_hw_accel"]
rk_hw_accel = []