[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
rand = "0.9.2"
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["fs", "io-util", "net", "rt-multi-thread"] }
tokio-stream = "0.1.18"
uuid = { version = "1.18.0", features = ["v4"] }
